objects/ssot__TelematicsProvider__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Telematics Provider Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232288_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TelematicsProvider_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>TelematicsProvider_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1697761232288_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>